--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,19 @@ jobs:
           v1-npm-${{ github.ref }}-
           v1-npm-
 
-    - name: Restore node_modules
+    - name: Restore package
       id: node-modules-cache
       uses: actions/cache@v1
       with:
-        path: node_modules
-        key: v1-node-modules-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
+        path: .
+        key: v1-packages-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
 
     - name: Install
       if: steps.node-modules-cache.outputs.cache-hit != 'true'
       run: npm ci
+
+    - name: Build
+      run: npm run build
 
   lint:
     name: 'lint'
@@ -53,12 +56,12 @@ jobs:
       with:
         node-verion: '12.x'
 
-    - name: Restore node_modules
+    - name: Restore package
       uses: actions/cache@v1
       id: node-modules-cache
       with:
-        path: node_modules
-        key: v1-node-modules-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
+        path: .
+        key: v1-packages-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
 
     - name: Lint
       run: npm run lint:js
@@ -77,36 +80,12 @@ jobs:
       with:
         node-verion: '12.x'
 
-    - name: Restore node_modules
+    - name: Restore package
       uses: actions/cache@v1
       id: node-modules-cache
       with:
-        path: node_modules
-        key: v1-node-modules-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
+        path: .
+        key: v1-packages-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
 
     - name: Test
       run: npm run test:js
-
-  build:
-    name: 'build'
-    runs-on: ubuntu-18.04
-
-    needs:
-      - install
-
-    steps:
-    - uses: actions/checkout@v2-beta
-
-    - uses: actions/setup-node@v1
-      with:
-        node-verion: '12.x'
-
-    - name: Restore node_modules
-      uses: actions/cache@v1
-      id: node-modules-cache
-      with:
-        path: node_modules
-        key: v1-node-modules-${{ github.ref }}-${{ hashFiles('package-lock.json') }}
-
-    - name: Build
-      run: npm run build
