--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "@iadvize-oss/hello-world",
-  "version": "0.1.4",
-  "description": "Say hello",
+  "name": "@iadvize-oss/opaque-type",
+  "version": "0.0.0",
+  "description": "Functional opaque type api for Typescript and Javascript",
   "main": "dist/index.js",
   "module": "esm/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "dist/index.d.ts",
+    "esm"
   ],
   "scripts": {
     "build": "rm -rf dist esm && rollup -c",
-    "test:js": "jest --coverage",
+    "test:types": "tsd",
+    "test:api": "jest --coverage",
+    "test:js": "npm run test:types && npm run test:api",
     "lint:js": "echo \"no lint\"",
     "bump-changelog": "VERSION=$(cat package.json | jq '.version') && remark CHANGELOG.md -o --use @jarrodldavis/changelog-version-bump=version:$VERSION && git add CHANGELOG.md",
     "docs": "typedoc"
   },
-  "homepage": "https://github.com/iadvize/hello-world-javascript-library#readme",
+  "homepage": "https://github.com/iadvize/opaque-type-library#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iadvize/hello-world-javascript-library.git"
+    "url": "git+https://github.com/iadvize/opaque-type-library.git"
   },
   "keywords": [
     "iAdvize"
   ],
   "bugs": {
-    "url": "https://github.com/iadvize/hello-world-javascript-library/issues"
+    "url": "https://github.com/iadvize/opaque-type-library/issues"
   },
   "author": "iAdvize developers",
   "license": "MIT",
@@ -34,16 +39,21 @@
     "@babel/preset-env": "^7.8.4",
     "@jarrodldavis/remark-changelog-version-bump": "^0.1.1",
     "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-typescript": "^3.0.0",
     "@types/jest": "^25.1.1",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
     "remark-cli": "^7.0.1",
     "rollup": "^1.31.0",
+    "rollup-plugin-multi-input": "^1.0.3",
     "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.25.3",
     "ts-jest": "^25.1.0",
+    "tsd": "^0.11.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.16.9",
     "typescript": "^3.7.5"
+  },
+  "tsd": {
+    "directory": "test-types"
   }
 }
