--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -39,7 +39,7 @@ jobs:
         # because an action in a workflow run can't trigger a new workflow run
         # with the GITHUB_TOKEN
         # @see https://help.github.com/en/articles/events-that-trigger-workflows#event-restrictions
-        token: ${{ secrets.GITHUB_TOKEN_PONEY }}
+        token: ${{ secrets.GITHUB_TOKEN_REPO_WRITE }}
         pullNumber: ${{ (github.event.pull_request && github.event.pull_request.number) || steps.pr.outputs.pullNumber }}
         label: 'keep-rebased-then-merge'
 
