--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:types": "tsd",
     "test:api": "jest --coverage",
     "test:js": "npm run test:types && npm run test:api",
-    "lint:js": "echo \"no lint\"",
+    "lint:js": "eslint . --ext .js,.jsx,.ts,.tsx,.json,.d.ts --cache",
     "bump-changelog": "VERSION=$(cat package.json | jq '.version') && remark CHANGELOG.md -o --use @jarrodldavis/changelog-version-bump=version:$VERSION && git add CHANGELOG.md",
     "docs": "typedoc"
   },
@@ -37,10 +37,13 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@iadvize-oss/eslint-config": "^0.1.1",
+    "@iadvize-oss/eslint-config-jest": "0.0.4",
     "@jarrodldavis/remark-changelog-version-bump": "^0.1.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@types/jest": "^25.1.3",
     "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "remark-cli": "^7.0.1",
     "rollup": "^1.31.1",
