misc: set @iadvizeponey as package.json CODEOWNER

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,4 @@
-*   @guillaumewuip @cateland
+*                 @guillaumewuip @cateland
+
+package.json      @guillaumewuip @cateland @iadvizeponey
+package-lock.json @guillaumewuip @cateland @iadvizeponey
