--- a/.github/workflows/pull-changelog.yml
+++ b/.github/workflows/pull-changelog.yml
@@ -2,7 +2,7 @@ name: Pull request changelog
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, labeled, unlabeled]
+    types: [labeled, unlabeled, synchronize]
 
 jobs:
   changelog:
