--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 {
   "extends": [
-    "@iadvize-oss/eslint-config",
+    "@iadvize-oss/eslint-config/light-typescript",
     "@iadvize-oss/eslint-config-jest"
   ],
   "parserOptions": {
-    "project": "./.eslint.tsconfig.json"
+    "extraFileExtensions": [".json"]
   },
 }
-
