--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -134,7 +134,9 @@ jobs:
 
         VERSION=$(cat package.json | jq -r '.version')
 
-        npm run bump-changelog
+        npm add --no-save remark-cli@^6.0.0 @jarrodldavis/remark-changelog-version-bump@^0.1.1
+
+        ./node_modules/.bin/remark CHANGELOG.md -o --use @jarrodldavis/changelog-version-bump=version:\"$VERSION\"
 
         git add package.json CHANGELOG.md
         git commit -m "$VERSION"
