--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "suppressExcessPropertyErrors": false,
     "declaration": true,
+    "allowJs": true,
     "lib": ["ES2019"]
   },
   "exclude": ["node_modules"],
